--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "eslint-config-prettier": "^3.4.0",
     "eslint-plugin-prettier": "^3.0.1",
+    "node-sass": "^4.11.0",
     "prettier": "^1.15.3"
   }
 }
